fix review paragraph wrapping in the CSS grid

--- a/+/styles/public/default/reviews.css
+++ b/+/styles/public/default/reviews.css
@@ -61,6 +61,7 @@
 :--namespace .glsr-review-content {
     margin: var(--glsr-base-font-size) 0;
     width: 100%;
+    word-break: break-word;
 }
 :--namespace .glsr-review-date {
     align-items: center;
